# ChangeLog for dev-python/sqlobject
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/sqlobject/ChangeLog,v 1.25 2007/09/04 09:31:39 lucass Exp $

*sqlobject-0.9.1 (04 Sep 2007)

  04 Sep 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlobject-0.9.0-r1.ebuild, +sqlobject-0.9.1.ebuild:
  Version bump, fixed pysqlite dep. Dropped old version.

  04 Jul 2007; Lukasz Strzygowski <lucass@gentoo.org>
  sqlobject-0.6.1-r1.ebuild, sqlobject-0.9.0-r1.ebuild:
  Removed use_setuptools sed in 0.9.0-r1. Small cleanup in 0.6.1-r1.

*sqlobject-0.9.0-r1 (04 Jul 2007)

  04 Jul 2007; Rob Cakebread <pythonhead@gentoo.org>
  -sqlobject-0.9.0.ebuild, +sqlobject-0.9.0-r1.ebuild:
  Removed setuptools sed. bug# 184039

*sqlobject-0.9.0 (23 Jun 2007)

  23 Jun 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlobject-0.8.1.ebuild, -sqlobject-0.8.3.ebuild, +sqlobject-0.9.0.ebuild:
  Version bump. Dropped old versions.

*sqlobject-0.8.3 (05 May 2007)

  05 May 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlobject-0.7.3.ebuild, sqlobject-0.8.1.ebuild, +sqlobject-0.8.3.ebuild:
  Version bump, dropped old version, 0.8.1 left for stabilisation. Fixed
  pysqlite dep.

  02 May 2007; Rob Cakebread <pythonhead@gentoo.org> Manifest:
  Fixed Manifest.

  02 May 2007; Rob Cakebread <pythonhead@gentoo.org>
  +sqlobject-0.7.3.ebuild:
  Put 0.7.3 back in because its a dependency of turbogears.

  19 Mar 2007; Tiziano Müller <dev-zero@gentoo.org> sqlobject-0.8.1.ebuild:
  Some cosmetic updates, package doesn't depend on a specific version of
  psycopg anymore.

  19 Mar 2007; Lukasz Strzygowski <lucass@gentoo.org>
  sqlobject-0.8.1.ebuild:
  Fixed src_unpack to remove install_requires and extras_require from setup.py.

*sqlobject-0.8.1 (19 Mar 2007)

  19 Mar 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -sqlobject-0.7.2.ebuild, -sqlobject-0.7.3.ebuild, -sqlobject-0.8.0.ebuild,