@@ -6,19 +6,19 @@ MD5 5b2d75adc12e9723956e5f5bc0d6dbcf files/converters-0.6.1-gentoo.diff 894
 RMD160 506e31772d417eb66e987f7428bdcd77fc5ccd5c files/converters-0.6.1-gentoo.diff 894
 SHA256 ecc02b9b7661df167ce0e21b0991b545e35b9a01f4b19533453c616e18be04a1 files/converters-0.6.1-gentoo.diff 894
 DIST SQLObject-0.6.1.tar.gz 147871 RMD160 f18cdcdf8ed4484b7365f9459e627c892ef24f99 SHA1 a54b7dc0c71f19f0672324d94efedf9eb43481de SHA256 964f56fed08c65d144da301ed3dd5aa4581d055238453369ed1b87ce65f8ca56
-DIST SQLObject-0.9.1.tar.gz 247562 RMD160 0b55a412ee2330fcb79be2322264e5b97e30b427 SHA1 a6e50b0b47f04403dd46d31c46739b64e55c145d SHA256 ed367fde9d9b1de4de2d486ef4516d3a941028d13c3f829684f69536b2522046
+DIST SQLObject-0.9.2.tar.gz 248562 RMD160 84b828e65a962f9e5525c039db1867758b1e3fc6 SHA1 457d33857c1eb21854695bd38853479485f50f69 SHA256 2aaea8f4736d4bf86f4bd5e215a3dc24c7ac1ec54c07d9347a58a26df7b8f50d
 EBUILD sqlobject-0.6.1-r1.ebuild 1022 RMD160 5ccc14798d7e9917359474dd4ee61d2fcf056639 SHA1 02a2d6c259242520259763e35e208f2fb6e67864 SHA256 0995fda67e84aa28246419b684ea31fda68d18deafe7909b67ce2a83f985e396
 MD5 32a128a117891fc463d563e27eea3be5 sqlobject-0.6.1-r1.ebuild 1022
 RMD160 5ccc14798d7e9917359474dd4ee61d2fcf056639 sqlobject-0.6.1-r1.ebuild 1022
 SHA256 0995fda67e84aa28246419b684ea31fda68d18deafe7909b67ce2a83f985e396 sqlobject-0.6.1-r1.ebuild 1022
-EBUILD sqlobject-0.9.1.ebuild 1293 RMD160 a7a1f9599c9757cf7c883feb8537776be6538479 SHA1 f57ae24d000795123a02a822a673da7999efd242 SHA256 4d41940afe3dfc163619a13e6490cc993e111aa66dd2eaaf4bc99712212088db
-MD5 0859724b5e090f9aae6fca2604c2d081 sqlobject-0.9.1.ebuild 1293
-RMD160 a7a1f9599c9757cf7c883feb8537776be6538479 sqlobject-0.9.1.ebuild 1293
-SHA256 4d41940afe3dfc163619a13e6490cc993e111aa66dd2eaaf4bc99712212088db sqlobject-0.9.1.ebuild 1293
-MISC ChangeLog 4215 RMD160 b5ae596957cc6719175f6d758f66f7f9b66499c0 SHA1 d0680c7958913a6951b839835e8243c877653496 SHA256 01353061c2685a357d7c187f7e3fc45fc68d58d136c0432d81f1ea4fa7b09030
-MD5 049c4e91ee6d04c345680dacce6d29b5 ChangeLog 4215
-RMD160 b5ae596957cc6719175f6d758f66f7f9b66499c0 ChangeLog 4215
-SHA256 01353061c2685a357d7c187f7e3fc45fc68d58d136c0432d81f1ea4fa7b09030 ChangeLog 4215
+EBUILD sqlobject-0.9.2.ebuild 1306 RMD160 b809db7164927bdfc7b3904bb9681665ceb3e863 SHA1 8f3ea45f12c6a1777e931454175505931f5a0903 SHA256 b20cf0d60e3ee5d3208e85ab90e8c6f1949fedfc3ee7489445b5049277032c07
+MD5 c1bf29142ad12946951149f327e35b47 sqlobject-0.9.2.ebuild 1306
+RMD160 b809db7164927bdfc7b3904bb9681665ceb3e863 sqlobject-0.9.2.ebuild 1306
+SHA256 b20cf0d60e3ee5d3208e85ab90e8c6f1949fedfc3ee7489445b5049277032c07 sqlobject-0.9.2.ebuild 1306
+MISC ChangeLog 4391 RMD160 c404468b676409afefb0d1cf73d889dbec157c8b SHA1 ad5490e00912fd6da2edfd275bd01b67ba022930 SHA256 29499b10f29a748760c020101204022ea5c3b58a71063130202f8d5ce6dbba82
+MD5 35f4d9ead57a515fb72175b6a5a134da ChangeLog 4391
+RMD160 c404468b676409afefb0d1cf73d889dbec157c8b ChangeLog 4391
+SHA256 29499b10f29a748760c020101204022ea5c3b58a71063130202f8d5ce6dbba82 ChangeLog 4391
 MISC metadata.xml 676 RMD160 368bd0c08b1282297b374d84829910819c9fe7b0 SHA1 6424724012d777b40c2c3dcd051a59e8c129757f SHA256 be46b20212b874a9f00241b7e4bfca561671533a6546269c207583de9ca4c191
 MD5 5d4321c353db7c20c868f492eef3bba2 metadata.xml 676
 RMD160 368bd0c08b1282297b374d84829910819c9fe7b0 metadata.xml 676
@@ -26,13 +26,13 @@ SHA256 be46b20212b874a9f00241b7e4bfca561671533a6546269c207583de9ca4c191 metadata
 MD5 091ef6e9e939c02b9c25d6cdf9982ad0 files/digest-sqlobject-0.6.1-r1 247
 RMD160 578db48a4ee5ee321ba7c5b4be701cea3d534917 files/digest-sqlobject-0.6.1-r1 247
 SHA256 c0fe18230658e5d2712b3473446e55cdbafb7a87775480132c34f2b8834242e6 files/digest-sqlobject-0.6.1-r1 247
-MD5 39dda9580e2a94463831dfe2ded92648 files/digest-sqlobject-0.9.1 247
-RMD160 0127c06059ea533a9766ad68a29bdde9c8ea12c8 files/digest-sqlobject-0.9.1 247
-SHA256 257a7c208e32d02ea994d07872eee325266ff754b4af31c421d23c5721bde5c7 files/digest-sqlobject-0.9.1 247
+MD5 347369df5ebb996f28ac36a011384f6c files/digest-sqlobject-0.9.2 247
+RMD160 b5360cd9c09efb1c3577a3165d39c721db8a51a3 files/digest-sqlobject-0.9.2 247
+SHA256 d1682d41992b24558198285efb99a3e5a8e3989189ce829f2f37bda2f159f648 files/digest-sqlobject-0.9.2 247
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.6 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFG3SYH2jLqHNfbg2URAmi9AKCo/scjPX3nv6cQUKfJg0kRZQ2QpgCguL0f
-jxbCQf3A6ff69X7Tn1RjyNg=
-=Acde
+iD8DBQFHLljE2jLqHNfbg2URAshwAJ4h9ipS+8Vvvop3laVzuat9S81pnwCfTl5t
+muXf4euAE83YUfsUOM5nMgE=
+=mIRM
 -----END PGP SIGNATURE-----
