@@ -1,3 +1,0 @@
-MD5 0cb952fc9d86200103c79ea52bde66b6 SQLObject-0.9.1.tar.gz 247562
-RMD160 0b55a412ee2330fcb79be2322264e5b97e30b427 SQLObject-0.9.1.tar.gz 247562
-SHA256 ed367fde9d9b1de4de2d486ef4516d3a941028d13c3f829684f69536b2522046 SQLObject-0.9.1.tar.gz 247562
