@@ -1,0 +1,3 @@
+MD5 11cdf136757fa0b3289d32e83a7ad71c SQLObject-0.9.2.tar.gz 248562
+RMD160 84b828e65a962f9e5525c039db1867758b1e3fc6 SQLObject-0.9.2.tar.gz 248562
+SHA256 2aaea8f4736d4bf86f4bd5e215a3dc24c7ac1ec54c07d9347a58a26df7b8f50d SQLObject-0.9.2.tar.gz 248562
